k8s/hexcall.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hexcall-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: hexcall.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hexcall
                port:
                  number: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: hexcall
spec:
  type: NodePort
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30001 # Specify a port in the range 30000-32767
  selector:
    app: hexcall
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexcall-deployment
  labels:
    app: hexcall
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hexcall
  template:
    metadata:
      labels:
        app: hexcall
    spec:
      containers:
        - name: hexcall
          image: hexcall
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
